First working client with abililty to login, logout and CRUD the list of DNS records.

--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,8 @@
     <developerConnection>scm:git:git@github.com:richard-strate/str8tech-onedyndns.git</developerConnection>
     <tag>HEAD</tag>
   </scm>
-    <modules>
-        <module>app</module>
-    </modules>
+  <modules>
+    <module>client</module>
+    <module>app</module>
+  </modules>
 </project>
