--- a/app/pom.xml
+++ b/app/pom.xml
@@ -1,12 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>com.str8tech.onedyndns</groupId>
-        <artifactId>str8tech-onedyndns</artifactId>
-        <version>1-SNAPSHOT</version>
-    </parent>
-    <artifactId>onedyndns-app</artifactId>
-    <packaging>jar</packaging>
-    <name>str8tech-onedyndns-app</name>
+  <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>com.str8tech.onedyndns</groupId>
+    <artifactId>str8tech-onedyndns</artifactId>
+    <version>1-SNAPSHOT</version>
+  </parent>
+  <artifactId>onedyndns-app</artifactId>
+  <packaging>jar</packaging>
+  <name>str8tech-onedyndns-app</name>
+  <dependencies>
+    <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>onedyndns-client</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
+      <scope>compile</scope>
+    </dependency>
+  </dependencies>
 </project>
