--- a/app/pom.xml
+++ b/app/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>com.str8tech.onedyndns</groupId>
     <artifactId>str8tech-onedyndns</artifactId>
-    <version>1-SNAPSHOT</version>
+    <version>1</version>
   </parent>
   <artifactId>onedyndns-app</artifactId>
   <packaging>jar</packaging>
