--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   </parent>
   <groupId>com.str8tech.onedyndns</groupId>
   <artifactId>str8tech-onedyndns</artifactId>
-  <version>1-SNAPSHOT</version>
+  <version>1</version>
   <packaging>pom</packaging>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -17,7 +17,7 @@
   </properties>
   <scm>
     <developerConnection>scm:git:git@github.com:richard-strate/str8tech-onedyndns.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>1</tag>
   </scm>
   <modules>
     <module>client</module>
