--- a/client/pom.xml
+++ b/client/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>com.str8tech.onedyndns</groupId>
     <artifactId>str8tech-onedyndns</artifactId>
-    <version>2</version>
+    <version>3-SNAPSHOT</version>
   </parent>
   <artifactId>onedyndns-client</artifactId>
   <packaging>jar</packaging>
